--- a/Android/FirebaseApp/app/src/main/res/values/strings.xml
+++ b/Android/FirebaseApp/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Firebase App</string>
     <string name="action_logout">Sair</string>
     <string name="action_favoritos">Favoritos</string>
-    <string name="action_perfil">Perfil</string>
+    <string name="action_profile">Perfil</string>
 
     <string name="facebook_application_id" translatable="false">565745754261143</string>
     <string name="facebook_app_id">565745754261143</string>
